* Fixed whitespace * Removed fixed height from header - more on this incoming

--- a/css/main.scss
+++ b/css/main.scss
@@ -55,11 +55,11 @@ a:hover
 
 .site
 {
-font-size:115%;
-text-align:left;
-max-width:700px;
-margin:1em auto 2em;
-line-height:1.5em;
+   font-size:115%;
+   text-align:left;
+   max-width:700px;
+   margin:1em auto 2em;
+   line-height:1.5em;
 }
 
 .header
@@ -93,7 +93,6 @@ line-height:1.5em;
    margin-top:0;
    float:left;
    width:100%;
-   height:12em;
 }
 
 .feature1, .feature2, .feature3
